[package]
name = "bx3-design"
version = "1.0.0"
edition = "2021"
authors = ["Bxthre3 Inc <dev@bxthre3.com>"]
description = "BX3 Design System - High-performance Rust implementation"
license = "MIT"
repository = "https://github.com/bxthre3inc/bx3-integrations"
keywords = ["design-system", "ui", "theming", "accessibility"]
categories = ["gui", "graphics"]
rust-version = "1.70"

[features]
default = ["wgpu"]
wgpu = ["dep:wgpu"]
software = ["dep:tiny-skia"]
headless = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
palette = "0.7"
once_cell = "1.19"
parking_lot = "0.12"
thiserror = "1.0"

# GPU rendering (default)
wgpu = { version = "0.20", optional = true }

# Software fallback rendering
tiny-skia = { version = "0.11", optional = true }

# Platform integration
[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_UI"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "rendering"
harness = false