[package]
name = "bx3-design"
version = "1.0.0"
edition = "2021"
authors = ["Bxthre3 Inc <engineering@bxthre3inc.com>"]
description = "High-performance Rust implementation of BX3 Design System"
license = "MIT"
repository = "https://github.com/bxthre3inc/bx3-integrations"
keywords = ["ui", "design-system", "gpu", "accessibility"]
categories = ["gui", "graphics"]
rust-version = "1.75"

[features]
default = ["wgpu", "accessibility"]
wgpu = ["dep:wgpu"]
software = ["dep:tiny-skia"]
accessibility = []
linux-dbus = ["dep:zbus"]

[dependencies]
# Core
once_cell = "1.19"
parking_lot = "0.12"
# Colors and math
palette = "0.7"
# GPU rendering (wgpu backend)
wgpu = { version = "0.19", optional = true }
# Software fallback (tiny-skia backend)
tiny-skia = { version = "0.11", optional = true }
# Accessibility detection
zbus = { version = "4.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "4.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_System_Accessibility"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "color_bench"
harness = false

[[example]]
name = "button_demo"
path = "examples/button_demo.rs"
